# gridseak

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-COMMITMENT.md  LICENSE-MIT  LIMITATIONS.md  README.md  SECURITY.md  THIRD-PARTY.md  rust-toolchain.toml
graphengine-analysis/: Cargo.toml  calibrate.sh
graphengine-analysis/calibration/: analyze_population.py  calibration_state.json  estimate_sizes.py  mass_calibrate.py  plot_distributions.py  plot_project_vs_population.py  repo_list.json  size_estimate.json
graphengine-analysis/src/: lib.rs
graphengine-analysis/src/health/: abstractness.rs  api_surface.rs  blast_radius.rs  cohesion.rs  complexity.rs  config.rs  coupling.rs  coverage_attach.rs  cycles.rs  dead_code.rs  dead_code_confidence.rs  depth.rs  distance_from_main_sequence.rs  entry_points.rs  fan_metrics.rs  git_signals_attach.rs  health_score.rs  hub_score.rs  incremental_fast_path.rs  information_flow.rs  instability.rs  layers.rs  loc.rs  managed_package_coupling_concentration.rs  metric_status.rs  mod.rs  multiple_triggers_per_sobject.rs  norms.rs  path_classification.rs  progress.rs  repo_classification.rs  report.rs  resolution_degraded.rs  structural_classification.rs  tangle.rs  temporal_coupling.rs  test_framework_registry.rs
graphengine-analysis/src/validation/: ecosystem_notes.rs  invocation_patterns.rs  mod.rs  overrides.rs
graphengine-analysis/tests/: complexity_test.rs  determinism_integration.rs  integration_test.rs  l1_merge_determinism.rs  metric_confidence_keys.rs  polyglot_mixed_integration.rs  primary_language_detection.rs  t1c_unknown_edge_kind_caveat.rs  t3_uniform_high_zero_gap.rs  t3f_fidelity_gap_regression.rs  t4_canary_tier_classification.rs  t7_dead_code_respects_recent_churn.rs  t7_npsp_layer0_shallow_caveat.rs  t8_dead_code_respects_extraction_coverage.rs
graphengine-diagnostic/: Cargo.toml
graphengine-diagnostic/src/: lib.rs  narratives.rs  priority.rs  trend.rs
graphengine-diagnostic/tests/: real_report_smoke.rs
graphengine-git-signals/: Cargo.toml
graphengine-git-signals/examples/: dump_report.rs
graphengine-git-signals/src/: caveats.rs  confidence.rs  errors.rs  extractor.rs  lib.rs  ownership.rs  predicates.rs  repo_shape.rs  report.rs  window.rs
graphengine-git-signals/tests/: t7_co_change_two_file_pair.rs  t7_non_git_repo.rs  t7_shallow_clone_guard.rs  t7_three_commits_one_author.rs  t7_tree_diff_excludes_directories.rs
graphengine-git-signals/tests/common/: mod.rs
graphengine-infra/: Cargo.toml  ENGINE_ADAPTER_IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  build.rs  template_output.json
graphengine-infra/src/services/: mod.rs  template_service.rs
graphengine-infra/tests/: template_query_by_fqn_like_seeds.rs  template_query_contract_v1.rs  template_query_guardrails.rs  template_query_traversal.rs  template_query_traversal_exact.rs  template_query_validation_and_determinism.rs  template_service_classification_filters.rs  template_service_subgraph_consistency.rs
graphengine-mcp/: Cargo.toml
graphengine-mcp/src/: auth.rs  cache.rs  main.rs  server.rs
graphengine-parsing/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
graphengine-parsing-test-support/: Cargo.toml
graphengine-parsing-test-support/src/: application_mocks.rs  lib.rs  mock_extractor.rs  mock_lsp_resolver.rs  mock_lsp_session.rs
graphengine-parsing/configs/: apex.yaml  csharp.yaml  go.yaml  java.yaml  javascript.yaml  python.yaml  rust.yaml  typescript.yaml  visualforce.yaml
graphengine-parsing/examples/: test_phase1_containment.rs
graphengine-parsing/proptest-regressions/: lib.txt
graphengine-parsing/src/: lib.rs  main.rs
graphengine-parsing/src/application/: errors.rs  mod.rs  ports.rs
graphengine-parsing/src/domain/: classification.rs  edge.rs  errors.rs  frameworks.rs  graph.rs  mod.rs  (+3 more)
graphengine-parsing/tests/: apex_class_symbols_e2e.rs  apex_config_loading.rs  apex_extends_implements_e2e.rs  apex_fqn_disambiguation_e2e.rs  apex_heuristic_corpus.rs  apex_inner_class_propagation_e2e.rs  apex_lsp_smoke.rs  apex_managed_packages_e2e.rs  apex_query_coverage.rs  apex_query_validation.rs  apex_r39_accessor_body_e2e.rs  apex_r41_field_initializer_e2e.rs  apex_resolver_r23_a3_field_dispatch_fixtures.rs  apex_resolver_r23_a4_overload_fixtures.rs  apex_resolver_r23_a5_vf_fixtures.rs  apex_resolver_r23_a6_inner_class_fixtures.rs  apex_resolver_r23_ctor_fixtures.rs  apex_resolver_r40_static_dispatch_fixtures.rs  apex_resolver_r46_keyword_extraction_fixtures.rs  apex_trigger_body_synthesis_e2e.rs  apex_trigger_events_e2e.rs  apex_volunteers_corpus_e2e.rs  call_resolution_integration.rs  cli_lsp_telemetry.rs  config_loading.rs  e2e_tests.rs  edge_kind_taxonomy.rs  extractor_constructor_fixtures.rs  failure_simulation.rs  fuzzing_tests.rs  graph_builder_confidence_preservation.rs  import_query_validation.rs  infrastructure_tests.rs  lsp_integration_real.rs  lsp_tests.rs  module_resolution_integration.rs  parse_repo_use_case_smoke.rs  pr3_import_edges.rs  rust_layer2_integration.rs  storage_tests.rs  (+13 more)
graphengine-progress/: Cargo.toml
graphengine-progress/src/: emitter.rs  lib.rs
graphengine-ra-ide-adapter/: Cargo.toml
graphengine-ra-ide-adapter/src/: lib.rs  query.rs  resolver.rs
graphengine-ra-ide-adapter/tests/: adapter_integration.rs
gridseak-cli/: Cargo.toml
gridseak-cli/src/: analyze_command.rs  context_command.rs  doctor_command.rs  drilldown_command.rs  feedback_command.rs  graph_command.rs  history_command.rs  intent_router.rs  lib.rs  main.rs  mcp_preflight.rs  route_command.rs  scan_command.rs  scan_manifest.rs  workspace_delta.rs
gridseak-engine-runner/: Cargo.toml
gridseak-engine-runner/src/: config.rs  error.rs  lib.rs  progress.rs  registry.rs  subprocess.rs  version_check.rs
gridseak-engine-runner/tests/: incremental_persistent.rs  parity.rs  polyglot.rs  routing_regression.rs  s2_incremental_analysis.rs  structured_progress.rs  version_drift.rs
gridseak-local-store/: Cargo.toml
gridseak-local-store/src/: lib.rs  paths.rs  store.rs
(+408 files in other folders)
