[package]
name = "graphengine-diagnostic"
version.workspace = true
edition = "2021"
authors = ["GridSeak Team"]
license.workspace = true
description = "Product-layer diagnostic translation: Fix-First priority, risk narratives, trend delta. Pure functions over graphengine-analysis::HealthReport."

[dependencies]
graphengine-analysis = { path = "../graphengine-analysis" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
