[package]
name = "graphengine-infra"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Shared infrastructure (SQLite repository wiring, CLI plumbing) for GraphEngine."

[dependencies]
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled", "unlock_notify"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
