[package]
name = "gridseak-engine-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared scan-pipeline orchestrator: spawns the parser per language and the analyzer with consistent flags, emitting structured progress and surfacing typed errors. Used by gridseak-cli and the desktop shell so the two surfaces cannot drift in metric semantics."

[dependencies]
anyhow = "1"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

graphengine-analysis = { path = "../graphengine-analysis" }
graphengine-parsing = { path = "../graphengine-parsing" }
graphengine-progress = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
gridseak-cli = { path = "../gridseak-cli" }
tempfile = "3"
